--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 permalink: pretty
 highlighter: pygments
 # Need to change this when we go live:
-url: https://whitehouse.github.io
-baseurl: project
+url: http://whitehouse.github.io/playbook
+baseurl: playbook
