--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 permalink: pretty
 highlighter: pygments
 # Need to change this when we go live:
-url: http://whitehouse.github.io/playbook
+url: http://whitehouse.github.io/
 baseurl: playbook
