--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,8 @@ markdown: rdiscount
 highlighter: pygments
 url: http://playbook.cio.gov
 
+collections:
+  - plays
+
 gems:
   - jekyll-redirect-from
