Add project path so github pages can find assets
You must set baseurl to empty to run in local mode:

```
% jekyll serve --watch --baseurl ""
```

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 permalink: pretty
 markdown: rdiscount
 highlighter: pygments
-url: http://playbook.cio.gov
+url: http://mxabierto.github.io/playbook
+baseurl: /playbook
 title: Guía de Datos Abiertos para México
 
 collections:
