adjusted playbook to demo GPSDD customizations
removed playbook.cio.gov CNAME

removed url from _confit.yml

removed url from _confit.yml

fooling around with baseurl in config

fooling around with baseurl in config

fooling around with baseurl in config

fooling around with baseurl in config

fooling around with baseurl in config

fooling around with baseurl in config

changed baseurl to url to load assets

changed baseurl to url to load image

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 permalink: pretty
 highlighter: rouge
-url: https://playbook.cio.gov
+url: https://gpsdd.github.io/playbook/
 
 collections:
   - plays
